Allow naming control of entity parameter, plus void-200-to-204 fix